exports[`test renders Slot with booking as before 1`] = `
<div
  className="Slot">
  <Unknown
    booking={true}
    endTime={1899-12-31T14:00:00.000Z}
    startTime={1899-12-31T13:00:00.000Z} />
</div>
`;

exports[`test renders Slot without booking as before 1`] = `
<div
  className="Slot">
  <Connect(Component)
    booking={false}
    endTime={1899-12-31T14:00:00.000Z}
    startTime={1899-12-31T13:00:00.000Z} />
</div>
`;

exports[`test renders UnavailableSlot as before 1`] = `
<div
  className="unavailableSlot">
  <span
    className="message">
    unavailable 
    13:00
     to 
    14:00
  </span>
</div>
`;
